# Arduino-Handheld-Console

./: .gitmodules  NEWS.md  README.md
Arduino/: Arduino.ino
DEPRECIATED/: README.md
DEPRECIATED/PyGameEngine/: game.py  main.py
Docs/: README.md
Docs/Functions/: CLEAR.md  DISPLAY.md  FILL.md  INPUT.md  LINE.md  POINT.md
GameEngine/: '  CMakeLists.txt  Control.hpp  Debug.cpp  Debug.hpp  Display.cpp  Display.hpp  GameEngine.cpp  GameEngine.hpp  Makefile  Parse.cpp  Parse.hpp  Program.cpp  Program.hpp  Serial.cpp  Serial.hpp  Types.hpp  game.py  hardware.py  main.py
GameEngine/programs/: draw  main
Hardware/: GameEngine.cpp  GameEngine.hpp  Hardware.ino  Makefile  Parse.cpp  Parse.hpp  Program.cpp  Program.hpp  main
Hardware/programs/: main
